cabal-version:   2.2
name:            systemd-api
version:         0.1.0.1
synopsis:        systemd bindings
description:     Bindings to various systemd functions
homepage:        https://github.com/byteverse/systemd-api
bug-reports:     https://github.com/byteverse/systemd-api/issues
license:         BSD-3-Clause
license-file:    LICENSE
author:          Andrew Martin
maintainer:      amartin@layer3com.com
copyright:       2023 Andrew Martin
category:        System
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
  exposed-modules:    Linux.Systemd
  build-depends:
    , base        >=4.16.3 && <5
    , byte-order  >=0.1.2  && <0.2
    , byteslice   >=0.2.10 && <0.3
    , posix-api   >=0.5    && <1
    , primitive   >=0.7    && <0.10
    , text-short  >=0.1.5  && <0.2

  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall -O2
  extra-libraries:    systemd
  build-tool-depends: hsc2hs:hsc2hs >=0.68.5

source-repository head
  type:     git
  location: git://github.com/byteverse/systemd-api.git
